--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -10,12 +10,13 @@ $font-title:     'skia', $font-default;
 $font-size-base: 87.5%; // base 14
 
 // Colors
+$red:          red;
+$dark-red:     red;
 $brown:        #CBBBA0;
 $green:        #6BAA60;
 $light-green:  #B8EDBC;
 $gray:         #707070;
+$dark-gray:    #707070;
 $light-gray:   #EAE5E5;
 $white:        #EBEAEA;
-
-
-
+$link-color:   blue;
